fixed spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -49,15 +49,15 @@ table {
 */
 
 html {
-  color: DarkGoldenRod/*#DAA520*/;
-  background-color:#4682B4;
+  color: DarkGoldenRod/*#DAA520*/
+  ;
+  background-color: #4682B4;
   font-family: Depot New W00;
   font-size: 1.125em;
   /* 18px */
   line-height: 1.25em;
   /* 22.5px @ 18px em = 1 gridline */
 }
-
 header {
   background: url(../img/header.jpg) #49311c;
   -webkit-background-size: cover;
@@ -67,7 +67,6 @@ header {
   background-repeat: no-repeat;
   text-align: left;
 }
-
 h1, h2 {
   font-size: 2.441em;
   /* 43.945px @ 18px em */
@@ -78,15 +77,13 @@ h1, h2 {
   display: block;
   text-align: center;
 }
-
 h2 {
-  font-size:1.223em;
+  font-size: 1.223em;
 }
-
 #page {
-  padding: 1.222em; /* 16.5px */
+  padding: 1.222em;
+  /* 16.5px */
 }
-
 #city {
   font-size: 1.125em;
   line-height: 1.536em;
@@ -95,19 +92,16 @@ h2 {
   /* 22.5px @ 43.945px em */
   display: block;
 }
-
 #map {
   width: 100%;
   height: 500px;
 }
-
 #location, #forecast {
   padding-bottom: 1em;
   padding-left: 1em;
   padding-top: 1em;
   text-align: center;
 }
-
 #form {
   margin-top: 1em;
   padding-top: 1em;
@@ -115,11 +109,9 @@ h2 {
   background: #FFFACD;
   text-align: center;
 }
-
 #form-submit {
   background: orange;
 }
-
 .git, footer, li {
   color: #DAA520;
   text-align: center;
@@ -128,7 +120,6 @@ h2 {
   padding-left: 0.223em;
   padding-top: 0.223em;
 }
-
 .error {
   color: red;
 }
@@ -141,22 +132,15 @@ h2 {
     padding-right: 14.833%;
   }
 }
-
 @media screen and (min-width: 52.5em) {
   #page {
     padding-left: 19.048%;
     padding-right: 19.0478%;
   }
 }
-
 @media screen and (min-width: 90em) {
   #page {
     padding-left: 26.25%;
     padding-right: 26.25%;
   }
 }
-
-
-
-
- 
